# floatcalc

./: README.md  README.txt  history-screen-clamp-v2.diff  index.html  package.json  vite.config.ts
.github/workflows/: build-windows.yml  main.yml
scripts/: apply_rounded_glass_restore_v4_config.py  apply_theme_background_patch.py  apply_theme_background_patch_v2.py  apply_theme_outline_v3_config.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/installer/: floatcalc-night-installer.nsi
src-tauri/src/: main.rs
src/components/: ButtonGrid.css  ButtonGrid.tsx  Display.css  Display.tsx  HistoryPanel.css  HistoryPanel.tsx  SettingsDrawer.css  SettingsDrawer.tsx  TitleBar.css  TitleBar.tsx
src/styles/: globals.css
src/types/: index.ts
src/utils/: calculator.ts  storage.ts
