[package]
name = "floatcalc"
version = "0.1.0"
description = "A premium floating calculator desktop app"
authors = []
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "window-all",
  "path-all",
  "fs-read-file",
  "fs-write-file",
  "fs-create-dir",
  "fs-exists"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when `devPath` points to the
# filesystem. DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
